# django_widgets

./: .gitignore  pyproject.toml
src/: manage.py  pytest.ini  resetdb
src/dj_widgets/: apps.py  tasks.py  urls.py  views.py
src/dj_widgets/static/dj_widgets/js/: formset-widget.js
src/dj_widgets/templates/dj_widgets/: index.html
src/django_widgets_project/: asgi.py  settings.py  urls.py  wsgi.py
src/django_widgets_project/templates/: base.html  header.html
