[tool.poetry]
name = "django_widgets"
version = "0.1.0"
description = "first poetry project"
authors = ["Ailenei Dan <dan.ailenei@rover.com>"]

[tool.poetry.dependencies]
python = "^3.8"

django = "*"
django-extensions = "*"
hunter = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
